# C-OOP

./: mainProgettoFinaleScuola.cpp
Agenda/: CMakeLists.txt
Agenda/it/mameli_alemanno/calendario/: main.cpp
Agenda/it/mameli_alemanno/calendario/api/: Evento.cpp  Giorno.cpp
Agenda/it/mameli_alemanno/calendario/libs/: Calendario.h  Evento.h  Giorno.h
Agenda/it/mameli_alemanno/calendario/manager/: Calendario.cpp
GestoreConcessionario/: CMakeLists.txt  Macchina.cpp  Macchina.h  main.cpp
StartGestioneStudenti/: CMakeLists.txt  main.cpp  studente.cpp  studente.h
it/mameli_alemanno/calendario/api/: Evento.cpp  Giorno.cpp
it/mameli_alemanno/calendario/manager/: Calendario.cpp
